Beispiel aus Wikipedia ist nun korrekt

--- a/tme.ipynb
+++ b/tme.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def p_amb_alt(h):\n",
+    "    return 1.016-0.00012*h\n",
     "def p_amb(h):\n",
-    "    return 1.016-0.00012*h"
+    "    return 1.0148-0.0001142*h"
    ]
   },
   {
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9486\n",
-      "0.9711\n"
+      "0.9701\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "print(round(z(8,0.023),4))"
    ]
   },
@@ -88,21 +88,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9486\n",
-      "0.9099\n"
+      "948.6\n",
+      "0.9103\n"
      ]
     }
    ],
    "source": [
-    "print(round(p_amb(562),4))\n",
-    "print(round(z(562, 0.024),4))"
+    "def beispiel_aus_wiki():\n",
+    "    h = 562\n",
+    "    p = round(1016-0.12*562,1)\n",
+    "    print(p)\n",
+    "    p_e = 24\n",
+    "    z = round(T_norm/(T_norm + 15)*(round(p,0)+p_e)/(1013.25),4)\n",
+    "    print(z)\n",
+    "beispiel_aus_wiki()"
    ]
   },
   {
