--- a/tme.ipynb
+++ b/tme.ipynb
@@ -117,6 +117,59 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Ideales Gasgleichung:\n",
+    "\n",
+    "$ pV = nRT $\n",
+    "\n",
+    "\n",
+    "- p für den Druck,\n",
+    "- V für das Volumen,\n",
+    "- n für die Anzahl der Mole,\n",
+    "- R für die universelle Gaskonstante,\n",
+    "- T für die Temperatur.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Mit Z als Kompressibiltätsfaktor wird diese Gleiche zur realen Gasgleichung erweitert:\n",
+    "\n",
+    "$ pV = nRTZ $\n",
+    "\n",
+    "Nutzt man die Gleichung für das Betriebsvolumen und das Normvolumen und setzt sie gleich, ergbibt sich:\n",
+    "\n",
+    "$V_N = V_b \\cdot \\frac{p_b}{p_n} \\cdot \\frac{T_n}{T_b} \\cdot \\frac{Z_n}{Z_b}$\n",
+    "\n",
+    "Wir definieren die Kompessibiltätszahl k als\n",
+    "\n",
+    "$1/K \\coloneqq \\frac{Z_n}{Z_b}$\n",
+    "\n",
+    "und die Zustandszahl z als\n",
+    "\n",
+    "$z \\coloneqq  \\frac{p_b}{p_n} \\cdot \\frac{T_n}{T_b}   \\cdot  1/K $\n",
+    "\n",
+    "$F_{\\text{korr}} =  \\frac{K_{\\text{mu}}}{K_{\\text{wahr}}} $\n",
+    "\n",
+    "Damit kann das echte Normvolumen wie folgt ermittelt werden:\n",
+    "\n",
+    "$V_{\\text{N,wahr}} = V_{\\text{N,mu}} \\cdot  F_{\\text{korr}} $\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Energierermittlung:\n",
+    "\n",
+    "$ E = V_N \\cdot H $\n",
+    "\n",
+    "$ V_N = z \\cdot V_B $\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
