Formelwerk zur Analytischen Bilanzierung

--- a/slp_berechnung.ipynb
+++ b/slp_berechnung.ipynb
@@ -42,6 +42,43 @@
     "\n",
     "h_hef34(8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fab80bb",
+   "metadata": {},
+   "source": [
+    "# Analytische Bilanzierung"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6471d1c9",
+   "metadata": {},
+   "source": [
+    "**Definitionen:**\n",
+    "- $\\text{RL}$ = Restlast\n",
+    "- $\\text{SLP}_{\\text{syn}}(i)$ = synthetische SLP-Allokation des Zählpunkts i\n",
+    "- $\\text{SF} := \\frac{\\text{RL}}{\\sum_i \\text{SLP}_{\\text{syn}}(i)}$ = Skalierungsfaktor\n",
+    "- $\\text{ZF}(i) := \\frac{\\text{SLP}_{\\text{syn}}(i)}{\\sum_i \\text{SLP}_{\\text{syn}}(i)}$ = Zerlegungsfaktor des Zählpunkts i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91dcfdd6",
+   "metadata": {},
+   "source": [
+    "Die SLP-Allokation eine Zählpunkts berechnet sich dan zu:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\text{SLP}_{\\text{ana}}(i) &= \\text{SF} \\cdot \\text{SLP}_{\\text{syn}}(i) \\\\\n",
+    "&= \\frac{\\text{RL}}{\\sum_i \\text{SLP}_{\\text{syn}}(i)} \\cdot \\text{SLP}_{\\text{syn}}(i) \\\\\n",
+    "&= \\text{RL} \\cdot \\frac{\\text{SLP}_{\\text{syn}}(i)}{\\sum_i \\text{SLP}_{\\text{syn}}(i)} \\\\\n",
+    "&= \\text{RL} \\cdot \\text{ZF}(i)\n",
+    "\\end{align}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
